@@ -57,8 +57,9 @@ class ModifiedIterationChecker(checkers.BaseChecker):
     )
     def visit_for(self, node: nodes.For) -> None:
         iter_obj = node.iter
-        for body_node in node.body:
-            self._modified_iterating_check_on_node_and_children(body_node, iter_obj)
+        if isinstance(iter_obj, nodes.Name):
+            for body_node in node.body:
+                self._modified_iterating_check_on_node_and_children(body_node, iter_obj)
 
     def _modified_iterating_check_on_node_and_children(
         self, body_node: nodes.NodeNG, iter_obj: nodes.NodeNG
